[package]
description = "trustnote rust implmentation"
name = "trustnote"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
log = "0.4"
may = "0.3"
url = "1.7"
fern = "0.5"
config = "0.8"
failure = "0.1"
num_cpus = "1"
lazy_static = "1"
tungstenite = "0.5"

serde = "1"
serde_json = "1"
serde_derive = "1"

[dependencies.rusqlite]
version = "0.13"
features = ["bundled"]

