[package]
description = "trustnote rust implmentation"
name = "trustnote"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
log = "0.4"
may = "0.3"
url = "1.7"
fern = "0.5"
rand = "0.4"
config = "0.8"
failure = "0.1"
num_cpus = "1"
may_waiter = "0.1"
lazy_static = "1"
tungstenite = "0.5"

serde = "1"
serde_json = "1"
serde_derive = "1"

base64 = "0.6"
base32 = "0.3"
secp256k1 = "0.9"
sha1 = "0.6"
sha2 = "0.7"
ripemd160 = "0.7"
bit-vec = "0.4.4"
[dependencies.rusqlite]
version = "0.13"
features = ["bundled"]

[patch.crates-io]
rand = { git = "https://github.com/Xudong-Huang/rand.git" }