[package]
description = "trustnote rust implmentation"
name = "trustnote"
version = "0.2.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
may = "0.3"
log = "0.4"
url = "1.7"
rand = "0.5"
chrono = "0.4"
config = "0.9"
failure = "0.1"
app_dirs = "1.2"
indexmap = "1.0"
num_cpus = "1"
crossbeam = "0.4"
may_waiter = "0.1"
lazy_static = "1"
tungstenite = "0.6"

serde = "1"
serde_json = "1"
serde_derive = "1"

base64 = "0.9"
base32 = "0.3"
secp256k1 = "0.9"
sha1 = "0.6"
sha2 = "0.7"
ripemd160 = "0.7"
bit-vec = "0.5"

rust-embed = { git = "https://github.com/Xudong-Huang/rust-embed.git" }

[dependencies.rusqlite]
version = "0.13"
features = ["bundled"]


[profile.release]
lto = true
# panic = "abort"

[workspace]
members = [
    "hub",
    "ttt",
    "wallet_base",
]
