[package]
description = "trustnote hub rust implmentation"
name = "trustnote_hub"
version = "0.2.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
trustnote = { path = ".."}

may = "0.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde_json = "1"
may_signal = {git = "https://github.com/Xudong-Huang/may_signal.git"}
