[package]
description = "trustnote wallet cli rust implmentation"
name = "trustnote_client"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
trustnote = { path = ".."}
trustnote_wallet_base = { path = "../wallet_base" }
may = "0.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
serde_json = "1"
lazy_static = "1"
clap = {version = "2", features = ["yaml"]}