[package]
description = "trustnote wallet cli rust implmentation"
name = "ttt"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
trustnote = { path = ".."}
trustnote_wallet_base = { path = "../wallet_base" }
clap = {version = "2", features = ["yaml"]}

may = "0.3"
log = "0.4"
fern = "0.5"
chrono = "0.4"
failure = "0.1"

serde = "1"
serde_json = "1"
serde_derive = "1"

[dependencies.rusqlite]
version = "0.13"
features = ["bundled"]
