[package]
description = "trustnote wallet core rust implmentation"
name = "trustnote_cli_core"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
log = "0.4"
rand = "0.5"
bitcoin = "0.13"
wallet = { git = "https://github.com/rust-bitcoin/rust-wallet.git" }
