[package]
description = "trustnote wallet basic rust implmentation"
name = "trustnote_wallet"
version = "0.1.0"
authors = ["Xudong Huang <huangxu008@hotmail.com>"]
license = "MIT"

[dependencies]
log = "0.4"
rand = "0.5"
base64 = "0.6"
bitcoin = "0.13"
failure = "0.1"
secp256k1 = "0.9"
lazy_static = "1"
trustnote = { path = "../.."}
wallet = { git = "https://github.com/rust-bitcoin/rust-wallet.git" }

[dev-dependencies]

